human-intervention-logs/org.slf4j:slf4j-jdk14:1.8.0-beta0/gradle-test/gradle-test-2026-05-05T15-06-06-432831Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.slf4j:slf4j-jdk14:1.8.0-beta0
Command: `/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/build/reports/problems/problems-report.html
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:12: error: package org.slf4j.impl does not exist

import org.slf4j.impl.StaticMarkerBinder;
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date
                     ^
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:10: error: package org.slf4j.impl does not exist
import org.slf4j.impl.StaticMDCBinder;
                     ^
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:20: error: cannot find symbol
        StaticMarkerBinder binder = StaticMarkerBinder.SINGLETON;
        ^
  symbol:   class StaticMarkerBinder
  location: class StaticMarkerBinderTest
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:20: error: cannot find symbol
        StaticMarkerBinder binder = StaticMarkerBinder.SINGLETON;
                                    ^
  symbol:   variable StaticMarkerBinder
  location: class StaticMarkerBinderTest
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:19: error: cannot find symbol
        StaticMDCBinder binder = StaticMDCBinder.SINGLETON;
        ^
  symbol:   class StaticMDCBinder
  location: class StaticMDCBinderTest
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:19: error: cannot find symbol
        StaticMDCBinder binder = StaticMDCBinder.SINGLETON;
                                 ^
  symbol:   variable StaticMDCBinder
  location: class StaticMDCBinderTest
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:20: error: cannot find symbol
          StaticMarkerBinder binder = StaticMarkerBinder.SINGLETON;
          ^
    symbol:   class StaticMarkerBinder
    location: class StaticMarkerBinderTest
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:20: error: cannot find symbol
          StaticMarkerBinder binder = StaticMarkerBinder.SINGLETON;
                                      ^
    symbol:   variable StaticMarkerBinder
    location: class StaticMarkerBinderTest
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:19: error: cannot find symbol
          StaticMDCBinder binder = StaticMDCBinder.SINGLETON;
          ^
    symbol:   class StaticMDCBinder
    location: class StaticMDCBinderTest
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:19: error: cannot find symbol
          StaticMDCBinder binder = StaticMDCBinder.SINGLETON;
                                   ^
    symbol:   variable StaticMDCBinder
    location: class StaticMDCBinderTest
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMarkerBinderTest.java:12: error: package org.slf4j.impl does not exist
  import org.slf4j.impl.StaticMarkerBinder;
                       ^
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/tests/src/org.slf4j/slf4j-jdk14/1.8.0-beta0/src/test/java/org_slf4j/slf4j_jdk14/StaticMDCBinderTest.java:10: error: package org.slf4j.impl does not exist
  import org.slf4j.impl.StaticMDCBinder;
                       ^
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 14s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5942-fcafcabe/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.slf4j:slf4j-jdk14:1.8.0-beta0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 15s
9 actionable tasks: 1 executed, 8 up-to-date
